--- a/style.css
+++ b/style.css
@@ -49,10 +49,11 @@ button:hover {
 
 .color {
     aspect-ratio: 1;
-    border-radius: min(20px, 3vw);
-    box-shadow: inset 0 0 0 5px white;
-    cursor: pointer;
+    box-sizing: border-box;
+    border-radius: min(15px, 3vw);
+    border: 5px solid white;
     transition: scale 0.15s ease-in-out;
+    cursor: pointer;
 }
 
 .color:hover {
